--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,5 @@
  *= require_self
  */
 
-@import 'index';
-@import 'fonts';
-@import 'colors';
-@import 'bootstrap';
+@import 'components/index';
+@import 'config/index';
