change and update via stackoverflow stuff

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,5 +14,7 @@
  *= require_self
  */
 
-@import 'config/index';
-@import 'components/index';
+@import "config/index"
+@import "components/index"
+@import "bootstrap-sprockets"
+@import "bootstrap"
