--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -6,6 +6,10 @@
   padding-top: 30px;
   padding-bottom: 20px;
   margin: 20px;
+  font-size: 14px;
+  a {
+    color: black !important;
+  }
 }
 
 .column-contact {
