--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -55,6 +55,7 @@ body {
   }
   .banner-button  {
   line-height: 2.5;
+  font-size: 2rem !important;
   }
 
 }
@@ -73,13 +74,12 @@ body {
 @media only screen and (max-width: 1023px) {
   .banner-text {
     padding: 40px 20px;
-    top: 30%;
-    right: -30%;
+    top: 40%;
+    right: 1%;
     background: 0 0;
     font-size: 10px;
   }
   .banner-links {
-    position: fixed;
     left: 10%;
   }
   .banner-button  {
