--- a/app/views/portfolio/skills.html.erb
+++ b/app/views/portfolio/skills.html.erb
@@ -11,6 +11,10 @@
   </div>
   <div class="front-end">
     <h2><i class="fas fa-pencil-alt"></i>Front-End Web Development</h2>
+    <ul>
+      <li>June 2018 I completed wesbos <a href="https://javascript30.com/" target="blank">Javascript 30 course</a> </li>
+      <li>June 2018 I completed <a href="https://reactforbeginners.com/" target="blank">React For Beginners</a> </li>
+    </ul>
   </div><div class="back-end">
     <h2><i class="fas fa-code"></i>Back-End Web Development</h2>
   </div>
