updated contact info

--- a/app/views/portfolio/contact.html.erb
+++ b/app/views/portfolio/contact.html.erb
@@ -13,12 +13,12 @@
         <p>Programming Blog </p>
       </div>
       <div class="column">
-        <p><i class="fas fa-envelope"></i>&ensp; hello@cassymyers.com</p>
+        <p><i class="fas fa-envelope"></i>&ensp; cassymyers@gmail.com</p>
         <p><a href="https://www.linkedin.com/in/cassy-myers/"><i class="fab fa-linkedin"></i>&ensp; cassy-myers</p></a>
         <p><a href="https://github.com/cassysan"><i class="fab fa-github"></i>&ensp; cassysan</p></a>
-        <p><i class="fab fa-facebook-f"></i>&ensp; cassysan</p>
-        <p><i class="fas fa-globe"></i>&ensp; AwayWeStray</p>
-        <p><i class="fas fa-pencil-alt"></i>&ensp; Medium</p>
+        <p><a href="https://www.facebook.com/awaywestray/"><i class="fab fa-facebook-f"></i>&ensp; cassysan</a></p>
+        <p><a href="http://awaywestray.com/"><i class="fas fa-globe"></i>&ensp; AwayWeStray</a> </p>
+        <p><a href="https://medium.com/@cassymyers"><i class="fas fa-pencil-alt"></i>&ensp; Medium</a> </p>
       </div>
     </div>
   </div>
