--- a/app/views/portfolio/contact.html.erb
+++ b/app/views/portfolio/contact.html.erb
@@ -13,7 +13,7 @@
         <p>Programming Blog </p>
       </div>
       <div class="column">
-        <p><i class="fas fa-envelope"></i>&ensp; cassymyers@gmail.com</p>
+        <p><a href="mailto:cassymyers@gmail.com" title="mail: cassymyers@gmail.com"> <i class="fas fa-envelope"></i>&ensp; cassymyers@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/cassy-myers/"><i class="fab fa-linkedin"></i>&ensp; cassy-myers</p></a>
         <p><a href="https://github.com/cassysan"><i class="fab fa-github"></i>&ensp; cassysan</p></a>
         <p><a href="https://www.facebook.com/awaywestray/"><i class="fab fa-facebook-f"></i>&ensp; cassysan</a></p>
