add changes to list in skillset

--- a/app/assets/stylesheets/components/_skills.scss
+++ b/app/assets/stylesheets/components/_skills.scss
@@ -20,7 +20,7 @@
 }
 
 .overview, .front-end, .back-end, .about-details {
-  p {
+  p, li {
   font-family: 'Merriweather', serif;
   font-size: 14px;
   }
