add color black to front-end dev list

--- a/app/assets/stylesheets/components/_skills.scss
+++ b/app/assets/stylesheets/components/_skills.scss
@@ -23,6 +23,7 @@
   p, li {
   font-family: 'Merriweather', serif;
   font-size: 14px;
+  color: black important!;
   }
   .fas, .fab {
   color: #d3aba7;
